Fri Oct  8 06:58:56 UTC 2010  Olli Savia  <ops@iki.fi>

        * protocols/ace/RMCast/Flow.cpp:
        * tests/CDR_Array_Test.cpp:
        * tests/CDR_File_Test.cpp:
        * tests/CDR_Test.cpp:
        * tests/Upgradable_RW_Test.cpp:
          Use ACE::is_equal() to compare floating point values.

Thu Oct  7 12:34:20 UTC 2010  Olli Savia  <ops@iki.fi>

        * ASNMP/tests/Counter64_Test.cpp:
        * ace/ETCL/ETCL_Constraint.cpp:
        * ace/Monitor_Control/CPU_Load_Monitor.cpp:
          Use ACE::is_equal() to compare floating point values.

Tue Oct  5 07:23:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * COPYING:
          Small updates

        * docs/ACE-porting.html:
          Updated links

        * include/makeinclude/wrapper_macros.GNU:
          Added support for valgrind=1

Mon Oct  4 19:55:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/make_release.py:

          Updates.

Mon Oct  4 12:32:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/LSOCK_Stream.h:
          Doxygen changes

        * ace/Makefile.am:
          Removed zapped file

        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Removed SUN_CC_HAS_PVFC_BUG, this got added 8 years ago and is
          used for any SunCC compiler version. If some old SunCC compiler breaks
          we can readd this flag for just that compiler version

Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>

        * COPYING:

          Updated to include DAnCE.

Fri Oct  1 11:55:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-common.h:
          Fixed redefinition warnings

        * ace/ace_for_tao.mpc:
          Zapped some files

        * ace/config-win32-common.h:
        * ace/config-win32-msvc.h:
        * ace/config-win32.h:
          Cleanup

        * ace/config-win32-ghs.h: