@@ -1,3 +1,12 @@
+Fri Oct  8 07:42:26 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ace/OS_NS_stdio.h:
+        * ace/OS_NS_stdio.inl:
+        * ace/README:
+        * ace/Svc_Conf_Lexer.cpp:
+          Removed references to ACE_LACKS_CLEARERR. It is no
+          longer used.
+
 Fri Oct  8 06:58:56 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * protocols/ace/RMCast/Flow.cpp:
